feat(api): implement pagination, add ListTasks endpoint
