# cmd/server/main.go
@@ -34,6 +34,7 @@ func main() {
 	mux.HandleFunc("POST /auth/logout", handlers.Logout)
 
 	mux.Handle("POST /tasks", auth(http.HandlerFunc(gormRepository.Create())))
+	mux.Handle("GET /tasks", auth(http.HandlerFunc(gormRepository.ListTasks())))
 
 	// http://127.0.0.1:8080/swagger/index.html
 	mux.HandleFunc("/swagger/", httpSwagger.WrapHandler)
